[package]
name = "gri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2"
rusb = "0.9.3"
uuid = { version = "1.5", features = ["v8"] }
log = "0.4"
oneshot = "0.1.6"

[target.'cfg(linux)'.dependencies]
libudev-sys = "0.1.4"
